--- a/app/src/main/res/layout-land/activity_main.xml
+++ b/app/src/main/res/layout-land/activity_main.xml
@@ -97,7 +97,7 @@
         android:rowCount="5"
         android:columnCount="2"
         android:id="@+id/gridLayout"
-        android:layout_below="@+id/textView"
+        android:layout_centerVertical="true"
         android:layout_toRightOf="@+id/Body"
         android:layout_toEndOf="@+id/Body">
 
@@ -112,7 +112,8 @@
                 android:layout_alignParentStart="true"
                 android:onClick="onCheckboxClicked"
                 android:layout_row="0"
-                android:layout_column="0" />
+                android:layout_column="0"
+                android:checked="false" />
 
             <CheckBox
                 android:layout_width="wrap_content"
@@ -136,7 +137,20 @@
                 android:layout_alignParentLeft="true"
                 android:layout_alignParentStart="true"
                 android:onClick="onCheckboxClicked"
-                android:layout_row="0" />
+                android:layout_row="1"
+                android:layout_column="0" />
+
+        <CheckBox
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:text="Glasses"
+            android:id="@+id/checkglasses"
+            android:onClick="onCheckboxClicked"
+            android:layout_row="2"
+            android:layout_column="0"
+            android:layout_below="@+id/gridLayout"
+            android:layout_alignLeft="@+id/gridLayout"
+            android:layout_alignStart="@+id/gridLayout" />
 
         <CheckBox
                 android:layout_width="wrap_content"
@@ -148,7 +162,19 @@
                 android:layout_row="1"
                 android:layout_column="1" />
 
-            <CheckBox
+        <CheckBox
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:text="Shoes"
+                android:id="@+id/checkshoes"
+            android:onClick="onCheckboxClicked"
+                android:layout_row="2"
+                android:layout_column="1"
+            android:layout_below="@+id/gridLayout"
+            android:layout_alignParentRight="true"
+            android:layout_alignParentEnd="true" />
+
+        <CheckBox
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:text="Mouth"
@@ -158,7 +184,8 @@
                 android:layout_alignLeft="@+id/checkhat"
                 android:layout_alignStart="@+id/checkhat"
                 android:onClick="onCheckboxClicked"
-                android:layout_row="1" />
+                android:layout_row="3"
+                android:layout_column="0" />
 
             <CheckBox
                 android:layout_width="wrap_content"
@@ -169,7 +196,8 @@
                 android:layout_alignParentLeft="true"
                 android:layout_alignParentStart="true"
                 android:onClick="onCheckboxClicked"
-                android:layout_row="1" />
+                android:layout_row="3"
+                android:layout_column="1" />
 
         <CheckBox
                 android:layout_width="wrap_content"
@@ -180,8 +208,9 @@
                 android:layout_alignLeft="@+id/checknose"
                 android:layout_alignStart="@+id/checknose"
                 android:onClick="onCheckboxClicked"
-                android:layout_row="3"
-                android:layout_column="0" />
+                android:layout_row="4"
+                android:layout_column="0"
+            android:checked="false" />
 
         <CheckBox
             android:layout_width="wrap_content"
@@ -190,34 +219,10 @@
             android:id="@+id/checknose"
             android:layout_centerHorizontal="true"
             android:onClick="onCheckboxClicked"
-            android:layout_row="3"
+            android:layout_row="4"
             android:layout_column="1" />
 
     </GridLayout>
-
-    <CheckBox
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:text="Glasses"
-        android:id="@+id/checkglasses"
-        android:onClick="onCheckboxClicked"
-        android:layout_row="1"
-        android:layout_column="0"
-        android:layout_below="@+id/gridLayout"
-        android:layout_alignLeft="@+id/gridLayout"
-        android:layout_alignStart="@+id/gridLayout" />
-
-    <CheckBox
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:text="Shoes"
-            android:id="@+id/checkshoes"
-        android:onClick="onCheckboxClicked"
-            android:layout_row="2"
-            android:layout_column="1"
-        android:layout_below="@+id/gridLayout"
-        android:layout_alignParentRight="true"
-        android:layout_alignParentEnd="true" />
 
 
 </RelativeLayout>
